syntax = "proto3";

option go_package = "github.com/alesr/usrsvc/proto.v1";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string email = 5;
  string country = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string nickname = 3;
  string email = 4;
  string password = 5;
  string country = 6;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string email = 5;
  string password = 6;
  string country = 7;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {}

message ListUsersRequest {
  string country = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
}

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}
